# task_manager_bot

./: README.md
cod zip/: bot.py  bot_database.db  constants.py  database.py  handlers.py  navigation_manager.py  pyproject.toml  utils.py
cod zip/attached_assets/: COMMIT_EDITMSG  ORIG_HEAD  bot.py  bot_database.db  config.py  constants.py  database.py  handlers.py  index  main  navigation_manager.py  pyproject.toml  replit-agent  utils.py
cod zip/tests/: __init__.py  conftest.py  test_bot.py  test_database.py  test_handlers.py  test_navigation.py  test_utils.py
